# PhiSHRI

./: .gitignore  APLUS_QUICK_REFERENCE.txt  CLAUDE.md  INSTALL_GUIDE.md  PROJECT_SUMMARY.md  PULL_REQUEST_SUMMARY.md  PhiSHRI_MCP_README.md  QUICK_START.md  README.md  VALIDATION_REPORT.md  VSSC_TASK_NOW.txt  analysis_results.json  analyze_docs.py  generate_doors.py  install.ps1  install.sh  rust-guide-appendices.md  rust-guide-part2-intermediate.md  rust-guide-part3-advanced.md  rust-guide-part4-practical.md  rust-master-guide.md  todo.md
.agents/: AGENT_CEREBRAS_MASTER.md  AGENT_QA_TESTING.md
.claude/: BMETALC_SESSION_2025-11-25.md  BMETALC_SESSION_2025-11-26.md  instructions.md  settings.json  settings.local.json
.github/: BACKLOG_ITEMS.md  INSTALLER_SPEC.md
Memory_Issues_Solve_Here/: VSCC_PHISHRI_ONBOARDING_GUIDE.md
PhiDOOR/: CEREBRAS_COMPLETE_PROMPT.md
PhiSHRI/: ARCHITECTURE.md  COMPTIA_APLUS_KNOWLEDGE_BASE.md  DEPLOYMENT_SUMMARY.md  HASH_TABLE.json  HOW_TO_USE.md  INDEX.json  MCP_PROMPTS.md  NAVIGATION_LOGIC.md  PHISHRI_MCP_INJECTION_PROMPT.md  README.md  SEMANTIC_MAP.json  generate_comptia_doors.py  generate_shri_doors.py  vscc_config.json  vssc_config.json
docs/: CNAME  COMBINED_DOCUMENTATION_SUMMARY.md  index.html  styles.css
gui/: README.md  package.json
logs/: clickable_boundaries.txt  color_result.txt  directory_result.txt  (+4 more)
mcp-server/: Cargo.toml  LICENSE  README.md
mcp-server/src/: config.rs  main.rs
mcp-server/src/door/: loader.rs  manager.rs  mod.rs  schema.rs
mcp-server/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
(+1118 files in other folders)
